@@ -109,6 +109,17 @@
 			<artifactId>ognl</artifactId>
 			<version>3.1.26</version>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>3.12.4</version> <!-- Replace with the latest version -->
+			<scope>test</scope>
+		</dependency>
 
 
 	</dependencies>
@@ -131,6 +142,16 @@
 						<version>4.8.5</version>
 					</dependency>
 				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0</version>
+				<configuration>
+					<argLine>
+						-XX:+EnableDynamicAgentLoading -Djdk.instrument.traceUsage
+					</argLine>
+				</configuration>
 			</plugin>
 
 		</plugins>
